--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,8 @@ android {
 }
 
 dependencies {
-    // Rx
-    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    api 'io.reactivex.rxjava2:rxkotlin:2.4.0'
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0-M1"
     // Logging
-    api 'io.github.microutils:kotlin-logging:1.7.10'
+    api 'io.github.microutils:kotlin-logging:2.0.3'
 }
