--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 22
         targetSdkVersion 30
         versionCode 3
-        versionName "2.0.0"
+        versionName "2.0.1"
     }
 
     buildTypes {
@@ -49,7 +49,7 @@ android {
 
 dependencies {
     // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0-M1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
     // Logging
     api 'io.github.microutils:kotlin-logging:2.0.3'
 }
